tests/snapshots/integration_tests__stdlib_LearnableResidual.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron LearnableResidual(dim):
  inputs:
    main: [*shape, dim]
    skip: [*shape, dim]
  outputs:
    default: [*shape, dim]
  impl:
    Source: neuroscript,connections/LearnableResidual
