tests/snapshots/integration_tests__stdlib_MBConvBlock.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron MBConvBlock(channels, expansion, reduction):
  inputs:
    default: [batch, channels, height, width]
  outputs:
    default: [batch, channels, height, width]
  graph:
    in -> (main, skip)
    main -> Conv2d#0(channels, (channels * expansion), 1, 1, 0)
    Conv2d#0(channels, (channels * expansion), 1, 1, 0) -> BatchNorm#1((channels * expansion))
    BatchNorm#1((channels * expansion)) -> SiLU#2()
    SiLU#2() -> DepthwiseConv#3((channels * expansion), (channels * expansion), 3, 1, 1)
    DepthwiseConv#3((channels * expansion), (channels * expansion), 3, 1, 1) -> BatchNorm#4((channels * expansion))
    BatchNorm#4((channels * expansion)) -> SiLU#5()
    SiLU#5() -> SEBlock#6((channels * expansion), reduction)
    SEBlock#6((channels * expansion), reduction) -> Conv2d#7((channels * expansion), channels, 1, 1, 0)
    Conv2d#7((channels * expansion), channels, 1, 1, 0) -> BatchNorm#8(channels)
    BatchNorm#8(channels) -> projected
    (projected, skip) -> Add#9()
    Add#9() -> out
