tests/snapshots/integration_tests__stdlib_MoERouter.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron MoERouter(dim, num_experts, active_experts, expert_dim):
  inputs:
    default: [batch, seq, dim]
  outputs:
    default: [batch, seq, dim]
  impl:
    Source: neuroscript,routing/MoERouter
