tests/snapshots/integration_tests__stdlib_MultiHeadAttention.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron MultiHeadAttention(dim, num_heads):
  inputs:
    default: [batch, seq, dim]
  outputs:
    default: [batch, seq, dim]
  graph:
    in -> (q_path, k_path, v_path)
    q_path -> Linear#0(dim, dim)
    Linear#0(dim, dim) -> q
    k_path -> Linear#1(dim, dim)
    Linear#1(dim, dim) -> k
    v_path -> Linear#2(dim, dim)
    Linear#2(dim, dim) -> v
    (q, k, v) -> ScaledDotProductAttention#3(dim, num_heads)
    ScaledDotProductAttention#3(dim, num_heads) -> Linear#4(dim, dim)
    Linear#4(dim, dim) -> out
